--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.22.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/react": "^18",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18",
+    "@types/sweetalert": "^1.1.28",
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "typescript": "^5"
